// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch /> when autoFocus should render correctly 1`] = `
<label
  className="css-q7pddh-WrapperLabel e1hyz84q6"
  role="presentation"
>
  <input
    autoFocus={true}
    className="css-1img21b-SwitchInput e1hyz84q3"
    type="checkbox"
    value={0}
  />
  <span
    className="css-7dyzx7-SwitchWrapper e1hyz84q7"
  >
    <span
      className="css-q7q1qc-SwitchSlider e1hyz84q5"
    >
      <svg
        className="css-bopgn6-Svg e1hyz84q4"
        height="2"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 .505C0 .226.232 0 .5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 .5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C3 .226 3.232 0 3.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 3.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C6 .226 6.232 0 6.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 6.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C9 .226 9.232 0 9.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 9.5 2a.495.495 0 0 1-.5-.505v-.99z"
          fill="#C4CACC"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <span
      className="css-r8xgwr-IconWrapper e1hyz84q2"
    >
      <svg
        className="e1hyz84q1 cr-icon css-1c959qy-StyledIcon-Checkmark er8b7wo0"
        style={
          Object {
            "height": "0.75rem",
            "width": "0.75rem",
          }
        }
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
        />
      </svg>
      <svg
        className="e1hyz84q0 cr-icon css-1h4ouhl-StyledIcon-Cross er8b7wo0"
        style={
          Object {
            "height": "0.75rem",
            "width": "0.75rem",
          }
        }
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M10.216 8l3.325-3.325a1.567 1.567 0 1 0-2.216-2.216L8 5.784 4.675 2.459A1.567 1.567 0 0 0 2.46 4.675L5.784 8l-3.325 3.325a1.567 1.567 0 1 0 2.216 2.216L8 10.216l3.325 3.325a1.567 1.567 0 1 0 2.216-2.216L10.216 8z"
        />
      </svg>
    </span>
  </span>
</label>
`;

exports[`<Switch /> when checked should render correctly 1`] = `
<label
  className="css-q7pddh-WrapperLabel e1hyz84q6"
  role="presentation"
>
  <input
    checked={true}
    className="css-1img21b-SwitchInput e1hyz84q3"
    type="checkbox"
    value={1}
  />
  <span
    className="css-7dyzx7-SwitchWrapper e1hyz84q7"
  >
    <span
      className="css-q7q1qc-SwitchSlider e1hyz84q5"
    >
      <svg
        className="css-bopgn6-Svg e1hyz84q4"
        height="2"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 .505C0 .226.232 0 .5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 .5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C3 .226 3.232 0 3.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 3.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C6 .226 6.232 0 6.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 6.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C9 .226 9.232 0 9.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 9.5 2a.495.495 0 0 1-.5-.505v-.99z"
          fill="#C4CACC"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <span
      className="css-r8xgwr-IconWrapper e1hyz84q2"
    >
      <svg
        className="e1hyz84q1 cr-icon css-1c959qy-StyledIcon-Checkmark er8b7wo0"
        style={
          Object {
            "height": "0.75rem",
            "width": "0.75rem",
          }
        }
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
        />
      </svg>
      <svg
        className="e1hyz84q0 cr-icon css-1h4ouhl-StyledIcon-Cross er8b7wo0"
        style={
          Object {
            "height": "0.75rem",
            "width": "0.75rem",
          }
        }
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M10.216 8l3.325-3.325a1.567 1.567 0 1 0-2.216-2.216L8 5.784 4.675 2.459A1.567 1.567 0 0 0 2.46 4.675L5.784 8l-3.325 3.325a1.567 1.567 0 1 0 2.216 2.216L8 10.216l3.325 3.325a1.567 1.567 0 1 0 2.216-2.216L10.216 8z"
        />
      </svg>
    </span>
  </span>
</label>
`;

exports[`<Switch /> when disabled should render correctly 1`] = `
<label
  className="css-q7pddh-WrapperLabel e1hyz84q6"
  role="presentation"
>
  <input
    className="css-1img21b-SwitchInput e1hyz84q3"
    disabled={true}
    type="checkbox"
    value={0}
  />
  <span
    className="css-7dyzx7-SwitchWrapper e1hyz84q7"
  >
    <span
      className="css-q7q1qc-SwitchSlider e1hyz84q5"
    >
      <svg
        className="css-bopgn6-Svg e1hyz84q4"
        height="2"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 .505C0 .226.232 0 .5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 .5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C3 .226 3.232 0 3.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 3.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C6 .226 6.232 0 6.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 6.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C9 .226 9.232 0 9.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 9.5 2a.495.495 0 0 1-.5-.505v-.99z"
          fill="#C4CACC"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <span
      className="css-r8xgwr-IconWrapper e1hyz84q2"
    >
      <svg
        className="e1hyz84q1 cr-icon css-1c959qy-StyledIcon-Checkmark er8b7wo0"
        style={
          Object {
            "height": "0.75rem",
            "width": "0.75rem",
          }
        }
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
        />
      </svg>
      <svg
        className="e1hyz84q0 cr-icon css-1h4ouhl-StyledIcon-Cross er8b7wo0"
        style={
          Object {
            "height": "0.75rem",
            "width": "0.75rem",
          }
        }
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M10.216 8l3.325-3.325a1.567 1.567 0 1 0-2.216-2.216L8 5.784 4.675 2.459A1.567 1.567 0 0 0 2.46 4.675L5.784 8l-3.325 3.325a1.567 1.567 0 1 0 2.216 2.216L8 10.216l3.325 3.325a1.567 1.567 0 1 0 2.216-2.216L10.216 8z"
        />
      </svg>
    </span>
  </span>
</label>
`;

exports[`<Switch /> when empty props should render correctly 1`] = `
<label
  className="css-q7pddh-WrapperLabel e1hyz84q6"
  role="presentation"
>
  <input
    className="css-1img21b-SwitchInput e1hyz84q3"
    type="checkbox"
    value={0}
  />
  <span
    className="css-7dyzx7-SwitchWrapper e1hyz84q7"
  >
    <span
      className="css-q7q1qc-SwitchSlider e1hyz84q5"
    >
      <svg
        className="css-bopgn6-Svg e1hyz84q4"
        height="2"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 .505C0 .226.232 0 .5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 .5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C3 .226 3.232 0 3.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 3.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C6 .226 6.232 0 6.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 6.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C9 .226 9.232 0 9.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 9.5 2a.495.495 0 0 1-.5-.505v-.99z"
          fill="#C4CACC"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <span
      className="css-r8xgwr-IconWrapper e1hyz84q2"
    >
      <svg
        className="e1hyz84q1 cr-icon css-1c959qy-StyledIcon-Checkmark er8b7wo0"
        style={
          Object {
            "height": "0.75rem",
            "width": "0.75rem",
          }
        }
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
        />
      </svg>
      <svg
        className="e1hyz84q0 cr-icon css-1h4ouhl-StyledIcon-Cross er8b7wo0"
        style={
          Object {
            "height": "0.75rem",
            "width": "0.75rem",
          }
        }
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M10.216 8l3.325-3.325a1.567 1.567 0 1 0-2.216-2.216L8 5.784 4.675 2.459A1.567 1.567 0 0 0 2.46 4.675L5.784 8l-3.325 3.325a1.567 1.567 0 1 0 2.216 2.216L8 10.216l3.325 3.325a1.567 1.567 0 1 0 2.216-2.216L10.216 8z"
        />
      </svg>
    </span>
  </span>
</label>
`;

exports[`<Switch /> when id, name should render correctly 1`] = `
<label
  className="css-q7pddh-WrapperLabel e1hyz84q6"
  role="presentation"
>
  <input
    className="css-1img21b-SwitchInput e1hyz84q3"
    id="feature1-id"
    name="feature1"
    type="checkbox"
    value={0}
  />
  <span
    className="css-7dyzx7-SwitchWrapper e1hyz84q7"
  >
    <span
      className="css-q7q1qc-SwitchSlider e1hyz84q5"
    >
      <svg
        className="css-bopgn6-Svg e1hyz84q4"
        height="2"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 .505C0 .226.232 0 .5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 .5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C3 .226 3.232 0 3.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 3.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C6 .226 6.232 0 6.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 6.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C9 .226 9.232 0 9.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 9.5 2a.495.495 0 0 1-.5-.505v-.99z"
          fill="#C4CACC"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <span
      className="css-r8xgwr-IconWrapper e1hyz84q2"
    >
      <svg
        className="e1hyz84q1 cr-icon css-1c959qy-StyledIcon-Checkmark er8b7wo0"
        style={
          Object {
            "height": "0.75rem",
            "width": "0.75rem",
          }
        }
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
        />
      </svg>
      <svg
        className="e1hyz84q0 cr-icon css-1h4ouhl-StyledIcon-Cross er8b7wo0"
        style={
          Object {
            "height": "0.75rem",
            "width": "0.75rem",
          }
        }
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M10.216 8l3.325-3.325a1.567 1.567 0 1 0-2.216-2.216L8 5.784 4.675 2.459A1.567 1.567 0 0 0 2.46 4.675L5.784 8l-3.325 3.325a1.567 1.567 0 1 0 2.216 2.216L8 10.216l3.325 3.325a1.567 1.567 0 1 0 2.216-2.216L10.216 8z"
        />
      </svg>
    </span>
  </span>
</label>
`;

exports[`<Switch /> when passing data-props should render correctly 1`] = `
<label
  className="css-q7pddh-WrapperLabel e1hyz84q6"
  role="presentation"
>
  <input
    className="css-1img21b-SwitchInput e1hyz84q3"
    data-property1={true}
    type="checkbox"
    value={0}
  />
  <span
    className="css-7dyzx7-SwitchWrapper e1hyz84q7"
  >
    <span
      className="css-q7q1qc-SwitchSlider e1hyz84q5"
    >
      <svg
        className="css-bopgn6-Svg e1hyz84q4"
        height="2"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 .505C0 .226.232 0 .5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 .5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C3 .226 3.232 0 3.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 3.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C6 .226 6.232 0 6.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 6.5 2a.495.495 0 0 1-.5-.505v-.99zm3 0C9 .226 9.232 0 9.5 0c.276 0 .5.214.5.505v.99A.508.508 0 0 1 9.5 2a.495.495 0 0 1-.5-.505v-.99z"
          fill="#C4CACC"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <span
      className="css-r8xgwr-IconWrapper e1hyz84q2"
    >
      <svg
        className="e1hyz84q1 cr-icon css-1c959qy-StyledIcon-Checkmark er8b7wo0"
        style={
          Object {
            "height": "0.75rem",
            "width": "0.75rem",
          }
        }
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
        />
      </svg>
      <svg
        className="e1hyz84q0 cr-icon css-1h4ouhl-StyledIcon-Cross er8b7wo0"
        style={
          Object {
            "height": "0.75rem",
            "width": "0.75rem",
          }
        }
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M10.216 8l3.325-3.325a1.567 1.567 0 1 0-2.216-2.216L8 5.784 4.675 2.459A1.567 1.567 0 0 0 2.46 4.675L5.784 8l-3.325 3.325a1.567 1.567 0 1 0 2.216 2.216L8 10.216l3.325 3.325a1.567 1.567 0 1 0 2.216-2.216L10.216 8z"
        />
      </svg>
    </span>
  </span>
</label>
`;
